# Cassanova

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ROLES.md  cassanova.json.reference  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cassanova/: bootstrap.py  cassanova-docker.json  run.py
cassanova/api/: bootstrap.py  server_config.py
cassanova/cass/: get_cluster_description.py  get_cluster_size.py  get_topology_details.py
cassanova/config/: APPConfig.py  CassanovaConfig.py  ClusterConfig.py  ClustersConfig.py  _json_log_formatter.py  app_config.py  auth_config.py  cassanova_config.py  cluster_config.py  cluster_metadata.py  k8s_config.py  ldap_config.py  logging_config.py  node_recovery_config.py  remediation_config.py  timeouts_config.py  tls_config.py
cassanova/consts/: app_routers.py  cass_tools.py  nodetool_patterns.py
cassanova/core/: auth_utils.py  k8s_discovery.py  ldap_manager.py  session_manager.py
cassanova/exceptions/: cql_exceptions.py  nodetool_status_unavailable.py  system_views_unavailable.py
cassanova/middleware/: auth_middleware.py  tls_middleware.py
tests/: conftest.py  test_admin_routes.py  test_argument_handling.py  test_auth.py  test_auth_manager.py  test_converters.py  test_csv_handler.py  test_execute_query.py  test_executor.py  test_json_log_formatter.py  test_k8s_discovery.py  test_k8s_discovery_filtering.py  test_ldap_manager.py  test_periodic_discovery.py  test_query_builder.py  test_sanitize_input.py  test_serialize_to_primitive.py  test_session_manager.py  test_table_info.py  test_timeouts_config.py  test_tool_validation.py
(+259 files in other folders)
